# InnovaAssist

./: Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
InnovaAssist/: asgi.py  settings.py  urls.py  wsgi.py
main/: forms.py  models.py  views.py
main/migrations/: 0001_initial.py  0002_alter_alumno_code.py  0002_alumno_created_at.py  0003_alumno_updated_at.py
main/templates/: confirm.html  index.html
