[tool.poetry]
name = "innovaassist"
version = "0.1.0"
description = ""
authors = ["Maximiliano Militzer <maxmilitzer@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
rut-chile = "^2.0.1"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
